--- a/.github/workflows/check_build.yml
+++ b/.github/workflows/check_build.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Build
-      run: cargo build --verbose
+    - name: Build && Test
+      run: cargo build
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test
