Imple some sections
Signed-off-by: Dengjianping <djptux@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ description  = "A webassembly interpreter."
 
 [dependencies]
 thiserror = "1.0.30"
+leb128 = "0.2"
 
 [profile.release]
 lto           = true
